zz-out/pass14_run2/zz-scripts/chapter01/plot_fig06_P_derivative_comparison.err
  File "/home/jplal/MCGT/zz-scripts/chapter01/plot_fig06_P_derivative_comparison.py", line 56
    parser.add_argument(
                       ^
SyntaxError: '(' was never closed
